--- a/eesti_wordle.vbproj
+++ b/eesti_wordle.vbproj
@@ -266,6 +266,13 @@
   <ItemGroup>
     <Compile Include="CGame.vb" />
     <Compile Include="CDatabase.vb" />
+    <Compile Include="CGraphics.vb" />
+    <Compile Include="formGraphics.Designer.vb">
+      <DependentUpon>formGraphics.vb</DependentUpon>
+    </Compile>
+    <Compile Include="formGraphics.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="formGameSettings.Designer.vb">
       <DependentUpon>formGameSettings.vb</DependentUpon>
     </Compile>
@@ -305,6 +312,7 @@
     </Compile>
     <Compile Include="IGame.vb" />
     <Compile Include="IDatabase.vb" />
+    <Compile Include="IGraphics.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -331,6 +339,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="formGameSettings.resx">
       <DependentUpon>formGameSettings.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formGraphics.resx">
+      <DependentUpon>formGraphics.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="formHistory.resx">
       <DependentUpon>formHistory.vb</DependentUpon>
