--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dropbox.Api" version="6.26.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="Google.Api.Gax" version="3.3.0" targetFramework="net48" />
   <package id="Google.Api.Gax.Rest" version="3.3.0" targetFramework="net48" />
