webScraper töötab. Lisatud HTMLAgilityPack library. Muutsin UCSonatähenduse suuremaks, et enamik definitsioone mahuks (vaja timmida)

--- a/packages.config
+++ b/packages.config
@@ -9,6 +9,7 @@
   <package id="Google.Apis.Translate.v2" version="1.51.0.875" targetFramework="net48" />
   <package id="Google.Cloud.Translation.V2" version="2.1.0" targetFramework="net48" />
   <package id="GoogleTranslateFreeApi" version="1.1.1" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.42" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
