--- a/eesti_wordle.vbproj
+++ b/eesti_wordle.vbproj
@@ -91,6 +91,9 @@
     <Reference Include="GoogleTranslateFreeApi, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\GoogleTranslateFreeApi.1.1.1\lib\netstandard1.1\GoogleTranslateFreeApi.dll</HintPath>
     </Reference>
+    <Reference Include="HtmlAgilityPack, Version=1.11.42.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>packages\HtmlAgilityPack.1.11.42\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.Bcl.AsyncInterfaces.1.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
