--- a/eesti_wordle.vbproj
+++ b/eesti_wordle.vbproj
@@ -268,11 +268,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CGame.vb" />
-    <Compile Include="CDatabase.vb" />
     <Compile Include="CGraphics.vb" />
     <Compile Include="CSonaTahendus.vb" />
-    <Compile Include="CTaustaMuusika.vb" />
     <Compile Include="CTimeLimit.vb" />
     <Compile Include="formWordList.Designer.vb">
       <DependentUpon>formWordList.vb</DependentUpon>
@@ -335,11 +332,8 @@
     <Compile Include="formTimeLimit.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="IGame.vb" />
-    <Compile Include="IDatabase.vb" />
     <Compile Include="IGraphics.vb" />
     <Compile Include="ISonaTahendus.vb" />
-    <Compile Include="ITaustaMuusika.vb" />
     <Compile Include="ITimeLimit.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -356,12 +350,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <Compile Include="UCMusicPlayer.Designer.vb">
-      <DependentUpon>UCMusicPlayer.vb</DependentUpon>
-    </Compile>
-    <Compile Include="UCMusicPlayer.vb">
-      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UCSonaTahendus.Designer.vb">
       <DependentUpon>UCSonaTahendus.vb</DependentUpon>
@@ -407,9 +395,6 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="UCMusicPlayer.resx">
-      <DependentUpon>UCMusicPlayer.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="UCSonaTahendus.resx">
       <DependentUpon>UCSonaTahendus.vb</DependentUpon>
     </EmbeddedResource>
@@ -436,6 +421,20 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Untitled.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="Andmekiht\Andmekiht.vbproj">
+      <Project>{fa749a41-94ee-44f2-aeff-548744f7341b}</Project>
+      <Name>Andmekiht</Name>
+    </ProjectReference>
+    <ProjectReference Include="Game\Game.vbproj">
+      <Project>{edd03834-3554-4207-8994-18f4ddbd5ae3}</Project>
+      <Name>Game</Name>
+    </ProjectReference>
+    <ProjectReference Include="TaustaMuusika\TaustaMuusika.vbproj">
+      <Project>{b0ae140f-8475-4a6b-bede-8cda0c57194f}</Project>
+      <Name>TaustaMuusika</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
