--- a/eesti_wordle.vbproj
+++ b/eesti_wordle.vbproj
@@ -269,7 +269,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CGraphics.vb" />
-    <Compile Include="CSonaTahendus.vb" />
     <Compile Include="CTimeLimit.vb" />
     <Compile Include="formWordList.Designer.vb">
       <DependentUpon>formWordList.vb</DependentUpon>
@@ -333,7 +332,6 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="IGraphics.vb" />
-    <Compile Include="ISonaTahendus.vb" />
     <Compile Include="ITimeLimit.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -350,12 +348,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <Compile Include="UCSonaTahendus.Designer.vb">
-      <DependentUpon>UCSonaTahendus.vb</DependentUpon>
-    </Compile>
-    <Compile Include="UCSonaTahendus.vb">
-      <SubType>UserControl</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -395,9 +387,6 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="UCSonaTahendus.resx">
-      <DependentUpon>UCSonaTahendus.vb</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="My Project\app.manifest" />
@@ -431,9 +420,17 @@
       <Project>{edd03834-3554-4207-8994-18f4ddbd5ae3}</Project>
       <Name>Game</Name>
     </ProjectReference>
+    <ProjectReference Include="SonaTahendus\SonaTahendus.vbproj">
+      <Project>{9681aa48-14b5-462b-b895-64f7aa32c0ea}</Project>
+      <Name>SonaTahendus</Name>
+    </ProjectReference>
     <ProjectReference Include="TaustaMuusika\TaustaMuusika.vbproj">
       <Project>{b0ae140f-8475-4a6b-bede-8cda0c57194f}</Project>
       <Name>TaustaMuusika</Name>
+    </ProjectReference>
+    <ProjectReference Include="Utils\Utils.vbproj">
+      <Project>{0b0e4518-2180-4200-9c34-263e5e29f730}</Project>
+      <Name>Utils</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
