Notification komponent, millega saab näidata achievementite teenimist. Sonatähendus tekstivärvi jne fixid.

--- a/Notification/Notification.vbproj
+++ b/Notification/Notification.vbproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4C554F45-1C03-492F-AEA2-3F7482757FCA}</ProjectGuid>
+    <ProjectGuid>{1AB7206A-A537-44FA-9F33-6BE67C05D6F6}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Notifications</RootNamespace>
-    <AssemblyName>Notifications</AssemblyName>
+    <RootNamespace>Notification</RootNamespace>
+    <AssemblyName>Notification</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -19,7 +19,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>Notifications.xml</DocumentationFile>
+    <DocumentationFile>Notification.xml</DocumentationFile>
     <DefineConstants>_MYFORMS=True</DefineConstants>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
@@ -29,7 +29,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>Notifications.xml</DocumentationFile>
+    <DocumentationFile>Notification.xml</DocumentationFile>
     <DefineConstants>_MYFORMS=True</DefineConstants>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
@@ -70,6 +70,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CNotification.vb" />
+    <Compile Include="INotification.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
