töötav versioon, notification töötab, achievementite loogika tuleb läbi ja näidatakse ekraanil

--- a/Achievements/Achievments.vbproj
+++ b/Achievements/Achievments.vbproj
@@ -65,7 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CAchievements.vb" />
-    <Compile Include="IAchievments.vb" />
+    <Compile Include="IAchievements.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
