--- a/eesti_wordle.vbproj
+++ b/eesti_wordle.vbproj
@@ -277,6 +277,12 @@
     <Compile Include="CSonaTahendus.vb" />
     <Compile Include="CTaustaMuusika.vb" />
     <Compile Include="CTimeLimit.vb" />
+    <Compile Include="formExportCSV.Designer.vb">
+      <DependentUpon>formExportCSV.vb</DependentUpon>
+    </Compile>
+    <Compile Include="formExportCSV.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="formWordList.Designer.vb">
       <DependentUpon>formWordList.vb</DependentUpon>
     </Compile>
@@ -374,6 +380,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="formExportCSV.resx">
+      <DependentUpon>formExportCSV.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="formWordList.resx">
       <DependentUpon>formWordList.vb</DependentUpon>
     </EmbeddedResource>
