--- a/Andmekiht/Andmekiht.vbproj
+++ b/Andmekiht/Andmekiht.vbproj
@@ -44,6 +44,9 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CSVExporterDNF">
+      <HintPath>..\CSVExporterDNF.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.SqlXml" />
