--- a/eesti_wordle.vbproj
+++ b/eesti_wordle.vbproj
@@ -55,6 +55,10 @@
     <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CSVExporterDNF, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\CSVExporterDNF.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -270,6 +274,12 @@
   <ItemGroup>
     <Compile Include="CGraphics.vb" />
     <Compile Include="CTimeLimit.vb" />
+    <Compile Include="formCSV.Designer.vb">
+      <DependentUpon>formCSV.vb</DependentUpon>
+    </Compile>
+    <Compile Include="formCSV.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="formWordList.Designer.vb">
       <DependentUpon>formWordList.vb</DependentUpon>
     </Compile>
@@ -351,6 +361,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="formCSV.resx">
+      <DependentUpon>formCSV.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="formWordList.resx">
       <DependentUpon>formWordList.vb</DependentUpon>
     </EmbeddedResource>
