async web scraper töötab

--- a/SonaTahendus/SonaTahendus.vbproj
+++ b/SonaTahendus/SonaTahendus.vbproj
@@ -119,5 +119,11 @@
   <ItemGroup>
     <Service Include="{94E38DFF-614B-4CBD-B67C-F211BB35CE8B}" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Utils\Utils.vbproj">
+      <Project>{0b0e4518-2180-4200-9c34-263e5e29f730}</Project>
+      <Name>Utils</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
